// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`headline renders correctly with custom props 1`] = `
<DocumentFragment>
  @media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 40.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 40.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-1 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #3358CC;
  text-transform: uppercase;
}

.emotion-1 svg {
  fill: #3358CC;
}

@media screen and (max-width: 479px) {
  .emotion-1 {
    margin-right: 12px;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-1 {
    margin-right: 12px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    margin-right: 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    margin-right: 16px;
  }
}

.emotion-2 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0A0A0A;
}

.emotion-2 svg {
  fill: #0A0A0A;
}

<section
    class="emotion-0"
  >
    <h5
      class="nk-headline-kicker emotion-1"
    >
      this is kicker 
    </h5>
    <h4
      class="nk-headline-heading emotion-2"
    >
      test
    </h4>
  </section>
</DocumentFragment>
`;

exports[`headline renders correctly with default props, just heading 1`] = `
<DocumentFragment>
  @media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 40.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 40.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-1 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0A0A0A;
}

.emotion-1 svg {
  fill: #0A0A0A;
}

<section
    class="emotion-0"
  >
    <h1
      class="nk-headline-heading emotion-1"
    >
      test
    </h1>
  </section>
</DocumentFragment>
`;

exports[`headline renders correctly with default props, with heading and kicker 1`] = `
<DocumentFragment>
  @media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 40.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 40.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-1 {
  color: #3358CC;
  text-transform: uppercase;
}

.emotion-1 svg {
  fill: #3358CC;
}

@media screen and (max-width: 479px) {
  .emotion-1 {
    margin-right: 12px;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-1 {
    margin-right: 12px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    margin-right: 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    margin-right: 16px;
  }
}

.emotion-2 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0A0A0A;
}

.emotion-2 svg {
  fill: #0A0A0A;
}

<section
    class="emotion-0"
  >
    <span
      class="nk-headline-kicker emotion-1"
    >
      this is kicker 
    </span>
    <h1
      class="nk-headline-heading emotion-2"
    />
  </section>
</DocumentFragment>
`;

exports[`headline renders correctly with logical prop margin overrides and crop padding is applied 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-inline: 30px;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 40.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 40.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-1 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0A0A0A;
}

.emotion-1 svg {
  fill: #0A0A0A;
}

<section
    class="emotion-0"
  >
    <h1
      class="nk-headline-heading emotion-1"
    />
  </section>
</DocumentFragment>
`;

exports[`headline renders correctly with logical prop padding overrides and crop padding is not applied 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-inline: 30px;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

.emotion-1 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0A0A0A;
}

.emotion-1 svg {
  fill: #0A0A0A;
}

<section
    class="emotion-0"
  >
    <h1
      class="nk-headline-heading emotion-1"
    />
  </section>
</DocumentFragment>
`;

exports[`headline renders correctly with overriden props 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "Bitter",serif;
  font-size: 32px;
  line-height: 36px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-1 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #FFFFFF;
}

.emotion-1 svg {
  fill: #FFFFFF;
}

<section
    class="emotion-0"
  >
    <h1
      class="nk-headline-heading emotion-1"
    />
  </section>
</DocumentFragment>
`;
